set debug configration for test

--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "testPool": "npx hardhat test ./test/Pool.test.js",
-    "testRouter": "npx hardhat test ./test/Router.test.js",
-    "testBridge": "npx hardhat test ./test/Bridge.test.js",
-    "testFactory": "npx hardhat test ./test/Factory.test.js",
-    "testStargate": "npx hardhat test ./test/Stargate.test.js --logs",
-    "testStargateToken": "npx hardhat test ./test/StargateToken.test.js",
-    "testOFT": "npx hardhat test test/Oft.test.js",
-    "testLPStaking": "npx hardhat test ./test/LPStaking.test.js",
-    "testStaking": "npx hardhat test ./test/Staking.test.js",
-    "testLPTokenERC20": "npx hardhat test ./test/LPTokenERC20.test.js",
-    "testSwapMath": "npx hardhat test ./test/SwapMath.test.js",
+    "Pool.test": "npx hardhat test ./test/Pool.test.js",
+    "Router.test": "npx hardhat test ./test/Router.test.js",
+    "Bridge.test": "npx hardhat test ./test/Bridge.test.js",
+    "Factory.test": "npx hardhat test ./test/Factory.test.js",
+    "Stargate.test": "npx hardhat test ./test/Stargate.test.js --logs",
+    "StargateToken.test": "npx hardhat test ./test/StargateToken.test.js",
+    "OFT.test": "npx hardhat test test/Oft.test.js",
+    "LPStaking.test": "npx hardhat test ./test/LPStaking.test.js",
+    "Staking.test": "npx hardhat test ./test/Staking.test.js",
+    "LPTokenERC20.test": "npx hardhat test ./test/LPTokenERC20.test.js",
+    "SwapMath.test": "npx hardhat test ./test/SwapMath.test.js",
     "simualtion": "npx hardhat test ./test/executeAction.test.js",
     "testDeploy": "npx hardhat --network fuji-sandbox deploy",
     "wireBridges": "npx hardhat --network arbitrum-rinkeby-sandbox wireBridges --target-networks optimism-kovan-sandbox",
